infra/services/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: microservice-gateway
spec:
    selector:
        istio: ingressgateway # use istio default controller
    servers:
    - port:
          number: 80
          name: http
          protocol: HTTP
      hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: microservice
spec:
    hosts:
    - "*"
    gateways:
    - microservice-gateway
    http:
    - match:
      - uri:
            exact: /hello
      route:
      - destination:
            host:  node-service-service
            port:
                number: 3000
