infra/services/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elk-ingress
spec:
  rules:
    - http:
        paths:
          - path: /elk
            backend:
              serviceName: kibana-service
              servicePort: 5601
